# DRCHubo_ws

./: README.md
hubo_description/: CMakeLists.txt  package.xml
hubo_description/launch/: hubo_launch.py
hubo_description/urdf/: DRC_hubo.sdf  Full_body_gazebo.urdf  Full_body_moveit.urdf  hubo_and_gripper.urdf  hubo_and_gripper_copy.urdf  hubo_gripper.urdf.xacro  hubo_left_gripper.urdf  hubo_left_gripper_bigger.urdf  hubo_right_gripper.urdf  hubo_right_gripper_bigger.urdf
hubo_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hubo_gripper_moveit_config/config/: DRC_HUBO.ros2_control.xacro  DRC_HUBO.srdf  DRC_HUBO.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
hubo_gripper_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/launch/: test_trajectory.launch.py
moveit2_scripts/src/: test_trajectory.cpp
